--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ footer {
   padding: 10px;
   font-size: 14px;
   color: #9e9e9e;
+  position: fixed;
+  bottom: 0;
 }
 
 /* Animation for rank change */
